--- a/accountbook-domain/.settings/org.eclipse.jdt.core.prefs
+++ b/accountbook-domain/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,7 @@
-#Mon Mar 09 22:12:43 CET 2009
+#Fri Oct 02 22:43:35 CEST 2009
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 org.eclipse.jdt.core.compiler.compliance=1.5
+org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
+org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
 org.eclipse.jdt.core.compiler.source=1.5
