--- a/accountbook-service/.settings/org.eclipse.jdt.core.prefs
+++ b/accountbook-service/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,7 @@
-#Wed Apr 01 18:38:52 CEST 2009
+#Fri Oct 02 22:43:36 CEST 2009
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 org.eclipse.jdt.core.compiler.compliance=1.5
+org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
+org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
 org.eclipse.jdt.core.compiler.source=1.5
