--- a/accountbook-web/pom.xml
+++ b/accountbook-web/pom.xml
@@ -57,5 +57,11 @@
 			<artifactId>accountbook-service</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.4</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
